MDEV-9390 Function found_rows() gives incorrect result where the previous SELECT contains ORDER BY clause

use the raw found_rows value only when SQL_CALC_FOUND_ROWS was specified